<resources>
    <string name="app_name">WallpaperBase</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="set_lock">Set Lock</string>
    <string name="set_both">Set both</string>
    <string name="set_home">Set home</string>
    <string name="resource">Resource</string>
</resources>
