<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnSetLock"
                android:textAllCaps="false"
                android:text="@string/set_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_marginTop="4dp"
                android:id="@+id/btnSetHome"
                android:textAllCaps="false"
                android:text="@string/set_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_marginTop="4dp"
                android:id="@+id/btnSetBoth"
                android:textAllCaps="false"
                android:text="@string/set_both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>