<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isGrantPermission"
            type="Boolean" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="isLoading"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/mlParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_main"
        tools:context=".MainActivity">

        <Button
            tools:visibility="gone"
            android:id="@+id/btnGrantPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{v->clickListener.onClick(v)}"
            android:text="@string/grant_permission"
            android:visibility="@{isGrantPermission?View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:onClick="@{v->clickListener.onClick(v)}"
            android:visibility="@{isGrantPermission?View.VISIBLE:View.GONE}"
            android:textAllCaps="false"
            android:text="@string/image"
            android:id="@+id/btnImage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnVideo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnResource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:onClick="@{v->clickListener.onClick(v)}"
            android:visibility="@{isGrantPermission?View.VISIBLE:View.GONE}"
            android:textAllCaps="false"
            android:text="@string/video"
            android:id="@+id/btnVideo"
            app:layout_constraintLeft_toRightOf="@+id/btnImage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            app:layout_constraintVertical_chainStyle="packed"
            android:onClick="@{v->clickListener.onClick(v)}"
            android:visibility="@{isGrantPermission?View.VISIBLE:View.GONE}"
            android:textAllCaps="false"
            android:text="@string/resource"
            android:id="@+id/btnResource"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnImage"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <FrameLayout
            android:id="@+id/flMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            app:elevation="8dp"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:clickable="true"
            android:visibility="@{isLoading?View.VISIBLE:View.GONE}"
            android:orientation="vertical"
            android:elevation="12dp"
            app:elevation="12dp"
            android:id="@+id/llLoading"
            android:gravity="center"
            android:background="#8000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UnusedAttribute"
            android:focusable="true">
            <ProgressBar
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
